Revert "Fix overlapping footer"
This reverts commit 814cffcd8121caf7dbb0e3f5a3df05eb4906c261.

--- a/openliberty.css
+++ b/openliberty.css
@@ -1,8 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Asap&family=IBM+Plex+Sans&display=swap');
 
-html {
-  position: relative;
-}
 
 .global-header .nav-links {
   display: none;
@@ -178,7 +175,7 @@ form#register input[type="text"] {
 /* Footer */
 
 footer {
-  position: relative;
+  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
